_sass/others.scss
/* ... */
@media print, screen and (max-width: 480px) {
    section[class="column_main"] {
        p, li, dl, a, i, em, b, strong {
            font-family: $font_default_thin;
            font-size: $font_size_default_thin;
        }
        sup a {
            font-family: $font_default;
            font-size: $font_size_default - 3;
            color: $color_text_highlight;
            border-bottom: none;
        }
    }
}

/* ------------------------------------------------------------------------- */
/* Left sidebar column                                                       */
/* ------------------------------------------------------------------------- */

section.column_left_sidebar h3,
section.column_left_sidebar h4,
section.column_left_sidebar h5 {
    font-weight: normal;
    margin-top: 8px;
    margin-bottom: 8px;
}

section.column_left_sidebar h3:first-child {
    margin-top: 0;
}

section.column_left_sidebar h3 {
    font-size: 15px;
    line-height: 18px;
}
/*
section.column_left_sidebar h4 { font-size: $font_size_heading - 2; }
section.column_left_sidebar h5 { font-size: $font_size_heading - 4; }
*/

#random_tidbits div.tidbit_entry,
#dlang_foundation,
#compiler_releases,
#dlang_news {
    border-radius: 3px;
    background: #1a1a1a;
    /* Use at least 1px padding on top otherwise it collapses */
    padding: 10px 15px 12px 15px;
    margin-bottom: 12px;
    h1 {
        font-family: $font_label;
        font-size: $font_size_label;
        font-weight: normal;
        color: $color_primary_darker;
        text-transform: uppercase;
        text-shadow: 1px 1px 1px #000;
        margin-top: 3px;
        margin-bottom: 12px;
    }
    a {
        font-family: $font_default_thin;
        font-size: $font_size_default_thin;
        color: $color_text_dark;
        &:hover {
            color: $color_primary;
        }
    }
    p {
        font-family: $font_default_thin;
        font-size: $font_size_default_thin;
        line-height: $font_size_default_thin + 3;
        color: $color_text_dark;
        margin-bottom: 0px;
        /* For the news we use */
        b, strong {
            font-size: $font_size_default_thin;
            text-shadow: none;
        }
        i, em {
            font-size: $font_size_default_thin;
        }
        &.qauthor {
            font-family: $font_heading;
            font-style: italic;
            font-size: $font_size_default_thin - 1;
            color: $color_text_highlight;
            padding-top: 8px;
        }
    }
    ul {
        list-style-type: square;
        list-style-image: none;
        padding-left: 20px;
        margin-top: 5px;
        margin-bottom: 0;
        li {
            font-size: $font_size_default_thin;
            color: $color_text_dark;
            padding-left: 5px;
        }
    }
}

#random_tidbits p {
    a, a:hover {
        border-bottom: none;
    }
}

#nav_left {
    border-radius: 3px;
    background: #1a1a1a;
    padding: 17px 15px 12px 15px;
    margin-bottom: 12px;
    li {
        margin-right: 1px;
        padding-bottom: 5px;
        a {
            font-family: $font_label;
            font-size: $font_size_default - 2;
            font-weight: normal;
            color: $color_primary_darker;

            text-transform: uppercase;
            
            padding-left: 9px;
            border-bottom: none;
        }
        a:hover {
            color: $color_primary;
        }
        a.active {
            color: black;
            background: $color_primary_darker;
            border: 1px solid $color_primary_darker;
            padding: 1px 8px 1px 8px;
            border-radius: 3px;
        }
    }
}

/* ------------------------------------------------------------------------- */
/* Right sidebar column                                                       */
/* ------------------------------------------------------------------------- */

section.column_right_sidebar {
    h1 {
        font-family: $font_label;
        font-weight: normal;
        font-size: $font_size_label;
        color: $color_primary_darker;
        text-shadow: 1px 1px 1px #000;
        text-transform: uppercase;
        margin: 0;
        padding-bottom: 10px;
    }
    
    ul, ol {
    
        ol {
            padding-left: 25px;
            ol {
                padding-left: 25px;
            }
        }
        
        li {
            font-family: $font_default_thin;
            font-size: $font_size_default_thin;
            
            padding: 0 0 0 5px;
            line-height: $font_size_default_thin + 4;
            
            a {
                font-family: $font_default_thin;
                font-size: $font_size_default_thin;
                color: $color_text_dark;
                border-bottom: none;
                
                &:hover {
                    color: $color_primary;
                }
                
                &:before {
                    /* content: "\00BB  "; */
                }
            }
        }
        
        li.current,
        a.current {
            color: $color_primary_darker;
        }
    }
    
    a {
        font-family: $font_default_thin;
        font-size: $font_size_default_thin;
        line-height: $font_size_default_thin + 4;
        color: $color_text_dark;
        border-bottom: none;
        
        &:hover {
            color: $color_primary;
        }
        
        &:before {
            /* content: "\00BB  "; */
        }
    }
}
/* ... */

